--- a/src/Login.module.scss
+++ b/src/Login.module.scss
@@ -8,18 +8,19 @@
 
   .card {
     padding: 20px;
+    height: 40vh;
 
     background-color: gray;
 
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
     gap: 10px;
 
     .title {
-      font-size: 20px;
-      font-weight: 600;
+      font-size: 30px;
+      font-weight: 700;
     }
 
     .input {
@@ -32,6 +33,7 @@
 
     button {
       padding: 10px;
+      margin-left: 10px;
     }
   }
 }
